2013-05-13  Russell Harrison  <rharrison@fedoraproject.org> - 0.2.0
    * Move to absolute qualification of variables and classes to avoid https://projects.puppetlabs.com/issues/17335
    * Rename and reformat CHANGELOG so the Puppet Forge can find and parse it

2013-03-19  Russell Harrison  <rharrison@fedoraproject.org> - 0.1.3
    * Also reload the firewall if the previous iptables config doesn't match the current one.

2012-10-30  Russell Harrison  <rharrison@fedoraproject.org> - 0.1.2
    * Set default path for `exec` resources to fix Issue #1

2012-10-10  Russell Harrison  <rharrison@fedoraproject.org> - 0.1.1
    * Fixed bug preventing `http` from being enabled if `https` was already present.

2012-10-09  Russell Harrison  <rharrison@fedoraproject.org> - 0.1.0
    * Fixed bug creating command line when multiple ports are passed in as an array
    * Don't restart `iptables` unless the config has changed
    * Allow for not clearing the configs on every run. Adds a new class that must be present for the catalog to compile.
    * Check for changes to the config before running `lokkit`

2012-09-29  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.1
    * Version 0.0.1 Initial release