@@ -1,5 +1,5 @@
 name 'rharrison-lokkit'
-version '0.1.3'
+version '0.2.0'
 
 author 'Russell Harrison'
 license 'GPLv3+'
