@@ -6,21 +6,21 @@
   "project_page": "https://github.com/rharrison10/puppet-lokkit",
   "source": "https://github.com/rharrison10/puppet-lokkit",
   "summary": "Use lokkit to manage the iptables firewall.  More convenient than working with iptables directly.",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "checksums": {
+    "CHANGELOG": "5408f810ddbc62d40ac1b3c2f1779cd0",
     "COPYING": "1685d8bd92ee4813b33ff9972f3092e8",
-    "ChangeLog.md": "9cef3d1b3166f7e7c066419dc4eb6f18",
     "LICENSE": "d32239bcb673463ab874e80d47fae504",
-    "Modulefile": "704fa66f426ec6cffab5b919bd92a367",
+    "Modulefile": "0101cd46e5a46c381df6dce35ddff47c",
     "README.md": "150007b74c4e0bee286f2ed6d8c65e96",
     "files/lokkit_chkconf_diff.sh": "ce7a5385cf98972b4b66bf3f48c914e0",
     "files/lokkit_chkconf_present.sh": "ed2543365a876d96d72b7622f5cb7b63",
     "manifests/clear.pp": "c802bd87324d6b942cbc9108fc911a64",
-    "manifests/custom.pp": "ad37c4c25acd7ee61b79d25c527b87e7",
+    "manifests/custom.pp": "9d35b84d3155e3b2f94318f9f4735531",
     "manifests/init.pp": "21660dfddd8b93230e1827d9e2b63981",
     "manifests/params.pp": "d6d56cdd43aedd41d769afb6ce9abe94",
-    "manifests/ports.pp": "4c1dd10ab04f9f3abc660363b2a2de51",
-    "manifests/services.pp": "7c0133486b0f3bb3f332e5d06406bcf9",
+    "manifests/ports.pp": "3be4da64a350d036fad405eea335a43e",
+    "manifests/services.pp": "612dd696e9d2901ccc0119feda123c71",
     "spec/spec.opts": "a600ded995d948e393fbe2320ba8e51c",
     "spec/spec_helper.rb": "ca19ec4f451ebc7fdb035b52eae6e909",
     "tests/init.pp": "448d965c470f214bffa02c47ae8e1cb4"
